Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4486

Mobile Qt Application wizard does not use Qt 4.6.3

XMLWordPrintable

      1. Set up Qt version 4.6.3 for Symbian in Tools / Options.
      2. Start the wizard using File / New File or Project... / Qt Widget Project / Mobile Qt Application.
      3. The target setup page of the wizard will not show Qt 4.6.3 for Symbian.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes