Fix minimum qt version for mobile/html wizard

That was broken by the TargetSetupPage refactoring

Task-Nr: QTCREATORBUG-4486
Reviewed-By: ck